--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,25 @@ logs
 
 # Package-lock.json (optional, depending on your preference)
 # package-lock.json
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Next.js
+.next/
+out/
+
+# Node
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
