--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^13.5.7",
     "openai": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "next-auth": "^4.24.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
