--- a/package.json
+++ b/package.json
@@ -9,21 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.10.0",
     "@next-auth/firebase-adapter": "^2.0.1",
-    "firebase": "^10.7.0",
-    "firebase-admin": "^11.11.0",
-    "next": "^13.5.7",
-    "next-auth": "^4.24.5",
+    "encoding": "^0.1.13",
+    "firebase": "^11.0.1",
+    "firebase-admin": "^11.11.1",
+    "next": "^15.0.1",
+    "next-auth": "^4.24.10",
     "openai": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.0",
+    "@types/node": "^22.7.9",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "assert": "^2.1.0",
     "autoprefixer": "^10.4.14",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
     "postcss": "^8.4.23",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   }
 }
